# blake3z

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  b3zsum.cpp  blake3.patch  blake3z.cache  blake3z_file.cpp  blake3z_file.hpp  dummy.c  gen_cache.cpp
b3zsum/: CMakeLists.txt  Dockerfile  b3zsum.cpp  b3zsum_unix.cpp  b3zsum_win.cpp  common.hpp  docker-build.sh
b3zsum/_docker/sources.list.d/: ubuntu.aarch64  ubuntu.amd64.sources
b3zsum/cmake/: mingw_toolchain.cmake  x64_toolchain.cmake
gen_cache/: CMakeLists.txt
